--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="app.js" defer></script>
-    <title>Rock Paper Tutorial
+    <title>Rock Paper Tutorial</title>
+  </head>
 
-    </title>
-</head>
-
-<body>
-
-    <h2>Computer Choice:<span id=computer-choice"></span></h2>
+  <body>
+    <h2>Computer Choice:<span id="computer-choice"></span></h2>
 
     <h2>User Choice:<span id="user-choice"></span></h2>
-    
+
     <h2>Result:<span id="result"></span></h2>
 
-    <button id="rock">rock</button>
-    <button id="paper">paper</button>
-    <button id="scissors">scissors</button>
-
-</body>
-
+    <button class="possible-choices" id="rock">rock</button>
+    <button class="possible-choices" id="paper">paper</button>
+    <button class="possible-choices" id="scissors">scissors</button>
+  </body>
 </html>
